# FASTAPI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
PhotoShare/: .env_exmp  README.md  docker-compose.yaml  main.py  pyproject.toml  test.db
PhotoShare/alembic/: env.py
PhotoShare/alembic/versions/: 3746880c5c0a_merge_heads.py  478377e897d5_еуіе.py  b8d2f7b61f14_create_initial_tables.py  e8724733169b_is_active_field.py
PhotoShare/docs/: index.rst
PhotoShare/docs/_build/doctrees/: environment.pickle  index.doctree
PhotoShare/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
PhotoShare/photoshare/: schemas.py
PhotoShare/photoshare/conf/: config.py
PhotoShare/photoshare/database/: db.py  models.py
PhotoShare/photoshare/fastapi/: function.py  main.py
PhotoShare/photoshare/repository/: comment.py  images.py  profile.py  tags.py  users.py
PhotoShare/photoshare/routes/: auth.py  comment.py  images.py  profile.py  tags.py  users.py
PhotoShare/photoshare/services/: auth.py
PhotoShare/photoshare/services/templates/: index.html  rate.html
PhotoShare/photoshare/static/: style.css
PhotoShare/photoshare/templates/: 404.html  index.html  rate.html
PhotoShare/tests/: conftest.py  test_comment_repo.py  test_comment_route.py  test_images_repo.py  test_repo_users.py  test_route_auth.py  test_route_users.py  test_serv_auth.py  test_tags_repo.py
alembic/: env.py
docs/: conf.py
tests/: conftest.py  test_comment_repo.py  test_comment_route.py  test_images_repo.py  test_images_route.py  (+5 more)
(+20 files in other folders)
